[gd_scene load_steps=31 format=2]

[ext_resource path="res://sprites/environment/library/door.png" type="Texture" id=1]
[ext_resource path="res://scenes/utilities/dialogue controller.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/utilities/interactable_old.gd" type="Script" id=3]
[ext_resource path="res://sprites/environment/sky/parallaxbg_bunnies.png" type="Texture" id=4]
[ext_resource path="res://scenes/utilities/interactable_item_old.gd" type="Script" id=5]
[ext_resource path="res://scenes/levels/horizontal hallway.gd" type="Script" id=6]
[ext_resource path="res://sprites/environment/sky/parallaxbg_clouds.png" type="Texture" id=7]
[ext_resource path="res://sprites/environment/sky/parallaxbg_sky.png" type="Texture" id=8]
[ext_resource path="res://sprites/environment/sky/parallaxbg-sunst.png" type="Texture" id=9]
[ext_resource path="res://materials/outline.tres" type="Material" id=10]
[ext_resource path="res://sprites/environment/horizontal hallway/hallwayscene-bg.png" type="Texture" id=11]
[ext_resource path="res://sprites/environment/horizontal hallway/hallwayscene-props.png" type="Texture" id=12]
[ext_resource path="res://sprites/environment/horizontal hallway/hallwayscene-foreground.png" type="Texture" id=13]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 800, 120 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 8 )
region = Rect2( 800, 0, 800, 120 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 8 )
region = Rect2( 1600, 0, 800, 120 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 8 )
region = Rect2( 2400, 0, 800, 120 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 800, 120 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 9 )
region = Rect2( 800, 0, 800, 120 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 9 )
region = Rect2( 1600, 0, 800, 120 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 9 )
region = Rect2( 2400, 0, 800, 120 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 800, 120 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 7 )
region = Rect2( 800, 0, 800, 120 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 800, 120 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 22, 68 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 19, 57.106 )

[sub_resource type="NavigationPolygon" id=4]
vertices = PoolVector2Array( 42, 136, 441, 135, 441, 223, 42, 224 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 42, 136, 441, 135, 441, 223, 42, 224 ) ]

[node name="horizontal hallway" type="Node2D"]
script = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1, 0.8 )
motion_mirroring = Vector2( 600, 0 )

[node name="sky" type="AnimatedSprite" parent="ParallaxBackground/sky"]
z_index = -1
frames = SubResource( 34 )
frame = 2
centered = false

[node name="sun" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 1 )

[node name="sun" type="AnimatedSprite" parent="ParallaxBackground/sun"]
position = Vector2( -387, 7 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 35 )
frame = 2
centered = false

[node name="clouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.326, 1 )
motion_mirroring = Vector2( 480, 0 )

[node name="clouds" type="AnimatedSprite" parent="ParallaxBackground/clouds"]
position = Vector2( -89, 36 )
frames = SubResource( 36 )
frame = 1
centered = false

[node name="bunnies" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="ParallaxBackground/bunnies"]
frames = SubResource( 36 )
frame = 1
centered = false

[node name="dialogue controller" parent="." instance=ExtResource( 2 )]

[node name="environment" type="YSort" parent="."]

[node name="player spawn" type="Node2D" parent="environment"]

[node name="0" type="Node2D" parent="environment/player spawn"]
position = Vector2( 424, 173 )

[node name="1" type="Node2D" parent="environment/player spawn"]
position = Vector2( 63, 169 )

[node name="classroom door" type="Sprite" parent="environment"]
material = ExtResource( 10 )
position = Vector2( 9, 112 )
texture = ExtResource( 1 )
flip_h = true

[node name="lounge door" type="Sprite" parent="environment"]
material = ExtResource( 10 )
position = Vector2( 471, 113 )
z_index = 1
texture = ExtResource( 1 )

[node name="foreground" type="Sprite" parent="environment"]
z_index = 2
texture = ExtResource( 13 )
centered = false

[node name="background" type="Sprite" parent="environment"]
texture = ExtResource( 11 )
centered = false

[node name="props" type="Sprite" parent="environment"]
texture = ExtResource( 12 )
centered = false

[node name="interactable zone" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="door to classroom" type="CollisionShape2D" parent="interactable zone"]
position = Vector2( 13, 126 )
shape = SubResource( 5 )
script = ExtResource( 5 )
travel_to = "classroom"
object_name = "classroom door"
outline_size = 0.025
sprite = NodePath("../../environment/classroom door")

[node name="door to lounge" type="CollisionShape2D" parent="interactable zone"]
position = Vector2( 465, 117 )
shape = SubResource( 6 )
script = ExtResource( 5 )
travel_to = "lounge"
object_name = "lounge door"
outline_size = 0.025
sprite = NodePath("../../environment/lounge door")
spawn_point = 1

[node name="navigation" type="Navigation2D" parent="."]

[node name="navmesh" type="NavigationPolygonInstance" parent="navigation"]
navpoly = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 476.0
margin_top = -8.0
margin_right = 516.0
margin_bottom = 32.0
rect_scale = Vector2( 16.4806, 6.59497 )
color = Color( 0.0666667, 0.0823529, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -655.0
margin_right = -615.0
margin_bottom = 40.0
rect_scale = Vector2( 16.4806, 6.59497 )
color = Color( 0.0666667, 0.0823529, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = -411.0
margin_top = -255.0
margin_right = -371.0
margin_bottom = -215.0
rect_scale = Vector2( 31.0806, 6.59497 )
color = Color( 0.0666667, 0.0823529, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = -371.0
margin_top = 244.0
margin_right = -331.0
margin_bottom = 284.0
rect_scale = Vector2( 33.8006, 6.59497 )
color = Color( 0.0666667, 0.0823529, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.431373, 0.278431, 0.733333, 1 )

[connection signal="body_shape_entered" from="interactable zone" to="interactable zone" method="_on_interactable_zone_body_shape_entered"]
[connection signal="body_shape_exited" from="interactable zone" to="interactable zone" method="_on_interactable_zone_body_shape_exited"]
[connection signal="input_event" from="interactable zone" to="interactable zone" method="_on_interactable_zone_input_event"]
